Remove UseConcMarkSweepGC java argument which is deprecated in version 9